# UFOS

./: .gitignore  CMakeLists.txt  README.md
assets/textures/: textures.txt
include/UFOS/: copyright_limitations.hpp  loop.hpp  player.hpp  ufo.hpp  ufos_game.hpp
src/: init.cpp  intro.cpp  loop.cpp  main.cpp  player.cpp  ufo.cpp  ufos_game.cpp
